# hi-equals-hi-lab

./: CMakeLists.txt  main.cpp
src/: string_compare.cpp  string_compare.hpp  string_to_ascii.cpp  string_to_ascii.hpp
tests/: string_compare_test.cpp
